2009-09-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/msl.c, doc/conjure.imdoc: Add support for a new 'profile'
	command in MSL/conjure which applies, adds, or removes one or more
	IPTC, ICC or generic profiles from a file.  Work contributed by
	John Sergeant.

2009-09-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/nt_base.c (NTGhostscriptFind): Make sure we close the
	registry key.  Log any Windows error messages.

	* magick/profile.c (AppendImageProfile): New function to add or
	append a profile.  If the profile already exists, then the data
	provided is appended to it.

	* coders/jpeg.c (ReadGenericProfile,ReadICCProfile,ReadIPTCProfile):
	Profile chunks need to be concatenated.  Otherwise "chunked"
	profiles become corrupted.

2009-09-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/average.c (AverageImages): Moved from image.c to new
	average.c file.

	* magick/colormap.h (VerifyColormapIndex): Moved here from color.h

	* magick/colormap.c (AllocateImageColormap): Moved from image.c to
	new colormap.c source file.
	(CycleColormapImage): Moved from image.c.
	(ReplaceImageColormap): Moved from image.c.
	(SortColormapByIntensity): Moved from image.c.
	(MagickConstrainColormapIndex): Moved here from color.c.

	* magick/describe.c (DescribeImage): Moved from image.c to new
	describe.c source file.

	* magick/plasma.c (PlasmaImage): Moved from image.c to new
	plasma.c source file.

	* magick/statistics.c (GetImageStatistics): Moved from image.c to
	new statistics.c source file.

	* magick/gradient.c (GradientImage): Moved from image.c to new
	gradient.c source file.

	* magick/texture.c (ConstituteTextureImage,TextureImage): Moved to
	new texture.c source file.

	* coders/svg.c (ENABLE_SVG_WRITER): Disable SVG writer by default
	since it usually does not work correctly and is unlikely to work
	correctly any time soon.

2009-09-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
