@@ -274,7 +274,7 @@ coders_bmp_la_LIBADD       = $(LIBMAGICK)
 coders_cals_la_SOURCES     = coders/cals.c
 coders_cals_la_CPPFLAGS    = $(MODULE_EXTRA_CPPFLAGS)
 coders_cals_la_LDFLAGS     = $(MODULECOMMONFLAGS)
-coders_cals_la_LIBADD      = $(LIBMAGICK)
+coders_cals_la_LIBADD      = $(LIBMAGICK) $(LIB_TIFF) $(LIB_JBIG) $(LIB_JPEG) $(LIB_ZLIB) $(LIB_MATH)
 
 # CAPTION coder module
 coders_caption_la_SOURCES  = coders/caption.c
