@@ -21,6 +21,17 @@
 </tr>
 </table>
 <p>
+2009-09-18  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> coders/cals.c (WriteCALSImage): Initial CALS Type 1 writer
+        implementation.  Contributed by John Sergeant.
+
+  <LI> coders/png.c (ReadOnePNGImage): Fresh pixels should be set using
+        SetImagePixels().
+
+</UL>
+<p>
 2009-09-17  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
